--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -153,7 +153,7 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </TextField>
-                                          <Button fx:id="btnDatosPersonas" maxWidth="200.0" mnemonicParsing="false" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                          <Button fx:id="btnDatosPersonas" maxWidth="200.0" mnemonicParsing="false" onAction="#buscarPersona" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -396,12 +396,12 @@
                               </GridPane>
                            </top>
                            <center>
-                              <TableView fx:id="tblProyectos" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                              <TableView fx:id="tblInvestigacion" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                                 <columns>
-                                  <TableColumn prefWidth="75.0" text="ID proyecto" />
-                                  <TableColumn prefWidth="75.0" text="Nombre proyecto" />
-                                    <TableColumn prefWidth="75.0" text="Área" />
-                                    <TableColumn prefWidth="75.0" text="Cargo" />
+                                  <TableColumn fx:id="colInvestigacionId" prefWidth="75.0" text="ID proyecto" />
+                                  <TableColumn fx:id="colInvestigacionNombre" prefWidth="75.0" text="Nombre proyecto" />
+                                    <TableColumn fx:id="colInvestigacionArea" prefWidth="75.0" text="Área" />
+                                    <TableColumn fx:id="colInvestigacionCargo" prefWidth="75.0" text="Cargo" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -456,7 +456,7 @@
                                     </GridPane>
                                     <TableView fx:id="tblIncentivos" maxHeight="200.0" maxWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                       <columns>
-                                        <TableColumn maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="-1.0" text="Año" />
+                                        <TableColumn fx:id="colIncentivosAnio" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="-1.0" text="Año" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
