--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -92,7 +92,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </GridPane>
-            <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
+            <TabPane fx:id="tabpaneProyectos" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
                   <Tab closable="false" text="Datos">
                      <content>
